Name:	Ghide
Version: 0.1
Build-depends: base>=2.0, witness>=0.1, Cabal>=1.1.6, gtk>=0.9.12.2, gnomevfs>=0.9.12.2, sourceview>=0.9.12.2

Executable: Ghide
Extensions: FunctionalDependencies ForeignFunctionInterface
Main-Is: Main.hs
Other-Modules: 
	Partial
	Browser
	Object
	MIME
	Interpret
Include-Dirs:
	/usr/include/gnome-vfs-2.0
	/usr/include/glib-2.0
	/usr/lib/glib-2.0/include
Extra-Libraries:
	gnomevfs-2
GHC-Options: -Wall -Werror
