name:	Ghide
version: 0.1
build-depends:
	base>=2.0, 
	stm>=2.0, 
	Cabal>=1.1.6, 
	bytestring>=0.9.0.1,
	gtk>=0.9.12.2, 
	gnomevfs>=0.9.12.2, 
	sourceview>=0.9.12.2, 
	witness>=0.1
build-type:	Simple

executable:	Ghide
extensions: FunctionalDependencies ForeignFunctionInterface GADTs RankNTypes ScopedTypeVariables
main-is: Main.hs
other-modules: 
	Partial
	ValueType
	Edit
	Browser
	Object
	File
	Lens
	Codec
	MIME
	Interpret
include-dirs:
	/usr/include/gnome-vfs-2.0
	/usr/include/glib-2.0
	/usr/lib/glib-2.0/include
extra-libraries:
	gnomevfs-2
