name:	Ghide
version: 0.1
build-depends:
	base>=2.0,
	containers>=0.2,
	stm>=2.0,
	Cabal>=1.1.6,
	bytestring>=0.9.0.1,
	gtk>=0.9.13,
	gio>=0.9.13,
	sourceview>=0.9.13,
	witness>=0.2,
	open-witness>=0.2
build-type:	Simple

executable:	Ghide
extensions:
	TypeFamilies
	EmptyDataDecls
	UndecidableInstances
	FunctionalDependencies
	ForeignFunctionInterface
	GADTs
	RankNTypes
	ScopedTypeVariables
main-is: Main.hs
other-modules:
	TypeFunc
	Partial
	ValueType
	Edit
	Browser
	Object
--	File
	Lens
	Codec
	MIME
	Interpret
include-dirs:
	/usr/include/gnome-vfs-2.0
	/usr/include/glib-2.0
	/usr/lib/glib-2.0/include
extra-libraries:
	gnomevfs-2
