name: Truth-Application
version: 0.1
cabal-version: >= 1.2
build-type: Simple

executable truth
{
build-depends:
    base>=4.0,
    bytestring>=0.9.0.1,
    glib==0.10.1,
    gtk==0.10.1,
    Truth-Shapes==0.1,
    Truth-Core==0.1,
    Truth-Linux==0.1,
    Truth-GTK==0.1
extensions:
    TypeFamilies
    EmptyDataDecls
    MultiParamTypeClasses
    TypeSynonymInstances
    UndecidableInstances
    FlexibleInstances
    FlexibleContexts
    FunctionalDependencies
    ForeignFunctionInterface
    GADTs
    RankNTypes
    ScopedTypeVariables
    PatternGuards
    ImpredicativeTypes
    ImplicitParams
    GeneralizedNewtypeDeriving
    ExistentialQuantification
main-is: Main.hs
ghc-options: -Wall
}
