name: Truth-Cabal
version: 0.1
cabal-version: >= 1.2
build-type:    Simple

library
{
build-depends:
 base>=4.0,
 Cabal>=1.6,
 Changes==0.1
extensions:
 TypeFamilies
 EmptyDataDecls
 UndecidableInstances
 FlexibleInstances
 FunctionalDependencies
 ForeignFunctionInterface
 GADTs
 RankNTypes
 ScopedTypeVariables
 PatternGuards
 ImpredicativeTypes
 ImplicitParams
 GeneralizedNewtypeDeriving
 ExistentialQuantification
exposed-modules:
 Data.Changes.Cabal
other-modules:
}

