name:	Changes
version: 0.1
build-depends:
	base>=2.0,
	containers>=0.2,
	stm>=2.0,
	Cabal>=1.1.6,
	bytestring>=0.9.0.1,
	witness>=0.2,
	open-witness>=0.2
build-type:	Simple

extensions:
	TypeFamilies
	EmptyDataDecls
	UndecidableInstances
	FunctionalDependencies
	ForeignFunctionInterface
	GADTs
	RankNTypes
	ScopedTypeVariables
	PatternGuards
exposed-modules:
	Data.Store
	Data.TypeFunc
	Data.Codec
	Data.Changes
other-modules:
	Data.Changes.Edit
	Data.Changes.Object
	Data.Changes.List
