name:	Changes
version: 0.1
build-depends:
	base>=2.0,
	containers>=0.2,
	stm>=2.0,
	Cabal>=1.1.6,
	bytestring>=0.9.0.1,
	witness>=0.2,
	open-witness>=0.2
build-type:	Simple

extensions:
	TypeFamilies
	EmptyDataDecls
	UndecidableInstances
	FlexibleInstances
	FunctionalDependencies
	ForeignFunctionInterface
	GADTs
	RankNTypes
	ScopedTypeVariables
	PatternGuards
	ImpredicativeTypes
exposed-modules:
	Data.Result
	Data.FunctorOne
	Data.Store
	Data.TypeFunc
	Data.Bijection
	Data.Codec
	Data.Changes
other-modules:
	Data.Changes.Edit
	Data.Changes.Object
	Data.Changes.List
