name:	Changes
version: 0.1
build-depends:
	base>=4.0,
	containers>=0.2,
	mtl>=1.1.0.2,
	stm>=2.0,
	Cabal>=1.1.6,
	bytestring>=0.9.0.1,
	witness>=0.2,
	open-witness>=0.2
build-type:	Simple

extensions:
	TypeFamilies
	EmptyDataDecls
	UndecidableInstances
	FlexibleInstances
	FunctionalDependencies
	ForeignFunctionInterface
	GADTs
	RankNTypes
	ScopedTypeVariables
	PatternGuards
	ImpredicativeTypes
	ImplicitParams
	GeneralizedNewtypeDeriving
	MultiParamTypeClasses
	FlexibleContexts
exposed-modules:
	Control.Wait
	Data.Result
	Data.FunctorOne
	Data.ConstFunction
	Data.Store
	Data.Chain
	Data.TypeFunc.TF
	Data.TypeFunc.Witness
	Data.TypeFunc
	Data.Bijection
	Data.Codec
	Data.Changes
	Data.Changes.Edit
	Data.Changes.Object
	Data.Changes.Tuple
	Data.Changes.List
	Data.Changes.Text
	Data.Changes.Context
other-modules:
