cabal-version: >=1.14
name: Truth-Core
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
        -- particular to this package
        NoImplicitPrelude
    ghc-options: -Wall -Werror
    build-depends:
        Cabal >=1.1.6,
        base >= 4.9 && < 5,
        bytestring >=0.9.1.5,
        containers >=0.2,
        countable >=0.1,
        mime >=0.3.2.1,
        open-witness >=0.3,
        template-haskell >=2.4,
        transformers >=0.2.2,
        witness >=0.3,
        comonad,
        mono-traversable,
        shapes,
        reity
    exposed-modules:
        Truth.Core
    other-modules:
        Truth.Core.Import
        Truth.Core.Sequence
        Truth.Core.Text
        Truth.Core.Read.Reader
        Truth.Core.Read.Readable
        Truth.Core.Read.FullReader
        Truth.Core.Read.ReadFunction
        Truth.Core.Read.WriterReadable
        Truth.Core.Read
        Truth.Core.Edit.Edit
        Truth.Core.Edit.EditFunction
        Truth.Core.Edit.EditLens
        Truth.Core.Edit.CleanEditLens
        Truth.Core.Edit.FloatingEditFunction
        Truth.Core.Edit.FloatingEditLens
        Truth.Core.Edit.GeneralLens
        Truth.Core.Edit
        Truth.Core.Types.None
        Truth.Core.Types.Whole
        Truth.Core.Types.Anything
        Truth.Core.Types.Sum
        Truth.Core.Types.SumWhole
        Truth.Core.Types.OneReader
        Truth.Core.Types.OneEdit
        Truth.Core.Types.OneWholeEdit
        Truth.Core.Types.Maybe
        Truth.Core.Types.Either
        Truth.Core.Types.Comonad
        Truth.Core.Types.ComonadLift
        Truth.Core.Types.Tuple
        Truth.Core.Types.Pair
        Truth.Core.Types.Function
        Truth.Core.Types.Context
        Truth.Core.Types.List
        Truth.Core.Types.String
        Truth.Core.Types.ByteString
        Truth.Core.Types.Key
        Truth.Core.Types.MIME
        Truth.Core.Types.Merge
        Truth.Core.Types.Savable
        Truth.Core.Types
        Truth.Core.Object.MutableEdit
        Truth.Core.Object.Object
        Truth.Core.Object.Subscription
        Truth.Core.Object.Lens
        Truth.Core.Object.Editor
        Truth.Core.Object.View
        Truth.Core.Object.Aspect
        Truth.Core.Object.File
        Truth.Core.Object

