cabal-version: >=1.14
name: Truth-Core
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
        -- particular to this package
        NoImplicitPrelude
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        containers,
        countable,
        mime,
        open-witness,
        template-haskell,
        transformers,
        witness,
        comonad,
        mono-traversable,
        filepath,
        directory,
        shapes,
        reity,
        random,
        uuid,
        text,
        aeson
    exposed-modules:
        Truth.Core
        Truth.World.File
        Truth.World.FileSystem
        Truth.World.Charset
        Truth.World.MIME
        Truth.World.JSON
        Truth.World.Soup
    other-modules:
        Truth.Core.Import
        Truth.Core.Sequence
        Truth.Core.Read.Reader
        Truth.Core.Read.Readable
        Truth.Core.Read.FullReader
        Truth.Core.Read.ReadFunction
        Truth.Core.Read.WriterReadable
        Truth.Core.Read
        Truth.Core.Edit.Edit
        Truth.Core.Edit.FullEdit
        Truth.Core.Edit.FloatingEditFunction
        Truth.Core.Edit.FloatingEditLens
        Truth.Core.Edit.GeneralLens
        Truth.Core.Edit
        Truth.Core.Types.None
        Truth.Core.Types.Whole
        Truth.Core.Types.Anything
        Truth.Core.Types.Sum
        Truth.Core.Types.SumWhole
        Truth.Core.Types.OneReader
        Truth.Core.Types.OneEdit
        Truth.Core.Types.OneWholeEdit
        Truth.Core.Types.Either
        Truth.Core.Types.Comonad
        Truth.Core.Types.ComonadLift
        Truth.Core.Types.Tuple
        Truth.Core.Types.Pair
        Truth.Core.Types.Function
        Truth.Core.Types.Context
        Truth.Core.Types.List
        Truth.Core.Types.String
        Truth.Core.Types.ByteString
        Truth.Core.Types.Key
        Truth.Core.Types.Merge
        Truth.Core.Types
        Truth.Core.Object.MutableEdit
        Truth.Core.Object.Object
        Truth.Core.Object.AutoClose
        Truth.Core.Object.MutableIOEdit
        Truth.Core.Object.Subscriber
        Truth.Core.Object.Lens
        Truth.Core.Object.Editor
        Truth.Core.Object.View
        Truth.Core.Object.HasView
        Truth.Core.Object.Aspect
        Truth.Core.Object.Savable
        Truth.Core.Object.Undo
        Truth.Core.Object

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        containers,
        countable,
        mime,
        open-witness,
        template-haskell,
        transformers,
        witness,
        comonad,
        mono-traversable,
        shapes,
        reity,
        Truth-Core,
        QuickCheck,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-golden
    main-is: Main.hs
    other-modules:
        Subscribe
