cabal-version: >=1.14
name: Truth-Core
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        time,
        containers,
        filepath,
        directory,
        cereal,
        uuid,
        aeson,
        sqlite-simple,
        mime,
        shapes
    exposed-modules:
        Truth.Core
        Truth.World.Anything
        Truth.World.File
        Truth.World.FileSystem
        Truth.World.Charset
        Truth.World.MIME
        Truth.World.JSON
        Truth.World.SQLite
        Truth.World.Soup
        Truth.World.Note
        Truth.World.Pinafore
    other-modules:
        Truth.Core.Import
        Truth.Core.Sequence
        Truth.Core.Read.SubjectReader
        Truth.Core.Read.Readable
        Truth.Core.Read.FullSubjectReader
        Truth.Core.Read.ReadFunction
        Truth.Core.Read.WriterReadable
        Truth.Core.Read
        Truth.Core.Edit.Edit
        Truth.Core.Edit.FullEdit
        Truth.Core.Edit.EditFunction
        Truth.Core.Edit.EditLens
        Truth.Core.Edit.GeneralLens
        Truth.Core.Edit
        Truth.Core.Types.None
        Truth.Core.Types.Whole
        Truth.Core.Types.Unit
        Truth.Core.Types.Sum
        Truth.Core.Types.SumWhole
        Truth.Core.Types.OneReader
        Truth.Core.Types.OneEdit
        Truth.Core.Types.OneWholeEdit
        Truth.Core.Types.Either
        Truth.Core.Types.Comonad
        Truth.Core.Types.ComonadLift
        Truth.Core.Types.Tuple
        Truth.Core.Types.ConsTuple
        Truth.Core.Types.EitherTuple
        Truth.Core.Types.Pair
        Truth.Core.Types.Lattice
        Truth.Core.Types.PointedEditLens
        Truth.Core.Types.Function
        Truth.Core.Types.Context
        Truth.Core.Types.List
        Truth.Core.Types.String
        Truth.Core.Types.ByteString
        Truth.Core.Types.Key
        Truth.Core.Types.FiniteSet
        Truth.Core.Types.Database
        Truth.Core.Types.TupleDatabase
        Truth.Core.Types.Merge
        Truth.Core.Types
        Truth.Core.Object.MutableEdit
        Truth.Core.Object.Object
        Truth.Core.Object.AutoClose
        Truth.Core.Object.MutableIOEdit
        Truth.Core.Object.Subscriber
        Truth.Core.Object.Lens
        Truth.Core.Object.Editor
        Truth.Core.Object.Savable
        Truth.Core.Object.Undo
        Truth.Core.Object
        Truth.Core.UI.Specifier
        Truth.Core.UI.Lens
        Truth.Core.UI.One
        Truth.Core.UI.Layout
        Truth.Core.UI.Checkbox
        Truth.Core.UI.TextEntry
        Truth.Core.UI.TextEditor
        Truth.Core.UI.Table
        Truth.Core.UI.WindowButton
        Truth.Core.UI.View
        Truth.Core.UI.GetView
        Truth.Core.UI
        Truth.World.SQLite.Schema
        Truth.World.Pinafore.Edit
        Truth.World.Pinafore.Ontology
        Truth.World.Pinafore.SQLite

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        containers,
        countable,
        mime,
        open-witness,
        template-haskell,
        transformers,
        witness,
        comonad,
        mono-traversable,
        shapes,
        Truth-Core,
        QuickCheck,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-golden
    main-is: Main.hs
    other-modules:
        Subscribe
