cabal-version:  >=1.10
name:           Truth-GTK
version:        0.1
license:        AllRightsReserved
author:         Ashley Yakeley
maintainer:     <ashley@semantic.org>
build-type:     Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        TypeFamilies
        EmptyDataDecls
        MultiParamTypeClasses
        TypeSynonymInstances
        UndecidableInstances
        FlexibleInstances
        FlexibleContexts
        FunctionalDependencies
        ForeignFunctionInterface
        GADTs
        RankNTypes
        ScopedTypeVariables
        PatternGuards
        ImpredicativeTypes
        ImplicitParams
        GeneralizedNewtypeDeriving
        ExistentialQuantification
        TemplateHaskell
        RecordWildCards
        ViewPatterns
    ghc-options: -Wall -Werror -fno-warn-deprecated-flags
    build-depends:
        base,
        bytestring,
        witness,
        open-witness,
        glib,
        gtk,
        shapes,
        reity,
        Truth-Core
    exposed-modules:
        Truth.UI.GTK
    other-modules:
        Truth.UI.GTK.Useful
        Truth.UI.GTK.GView
        Truth.UI.GTK.Window
        Truth.UI.GTK.Maybe
        Truth.UI.GTK.CheckButton
        Truth.UI.GTK.Text
        Truth.UI.GTK.Tuple
        Truth.UI.GTK.SourceView
