cabal-version: >=1.14
name: Truth-GTK
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options: -Wall -Werror
    build-depends:
        base,
        bytestring,
        transformers,
        countable,
        witness,
        open-witness,
        glib,
        gtk,
        shapes,
        reity,
        Truth-Core
    exposed-modules:
        Truth.UI.GTK
    other-modules:
        Truth.UI.GTK.Useful
        Truth.UI.GTK.GView
        Truth.UI.GTK.Window
        Truth.UI.GTK.Maybe
        Truth.UI.GTK.CheckButton
        Truth.UI.GTK.Text
        Truth.UI.GTK.Tuple
        Truth.UI.GTK.SourceView
