cabal-version: >=1.14
name: Truth-GTK
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        text,
        transformers,
        mono-traversable,
        countable,
        witness,
        open-witness,
        glib,
        gtk3,
        shapes,
        Truth-Core
    exposed-modules:
        Truth.UI.GTK
    other-modules:
        Truth.UI.GTK.Useful
        Truth.UI.GTK.GView
        Truth.UI.GTK.Window
        Truth.UI.GTK.Labelled
        Truth.UI.GTK.Maybe
        Truth.UI.GTK.CheckButton
        Truth.UI.GTK.Entry
        Truth.UI.GTK.Text
        Truth.UI.GTK.Tuple
        Truth.UI.GTK.Table

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        transformers,
        mono-traversable,
        countable,
        witness,
        open-witness,
        glib,
        gtk3,
        shapes,
        Truth-Core,
        Truth-GTK,
        QuickCheck,
        tasty,
        tasty-hunit
    main-is: Main.hs
    other-modules:
