name: Truth-Linux
version: 0.1
build-depends:
    Truth-Shapes==0.1,
    Truth-Core==0.1,
    hinotify>=0.3,
    bytestring>=0.9.1.4,
    unix>=2.3.1.0,
    mtl>=1.1.0.2,
    containers>=0.2.0.0,
    base>=4.0
build-type: Simple

extensions:
    TypeFamilies
    EmptyDataDecls
    UndecidableInstances
    FunctionalDependencies
    ForeignFunctionInterface
    GADTs
    RankNTypes
    ScopedTypeVariables
    ImplicitParams
exposed-modules:
    Data.Changes.File.Linux
other-modules:
    System.INotify.Balanced
