cabal-version:  >=1.10
name:           Truth-Linux
version:        0.1
license:        AllRightsReserved
author:         Ashley Yakeley
maintainer:     <ashley@semantic.org>
build-type:     Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        TypeFamilies
        EmptyDataDecls
        UndecidableInstances
        FunctionalDependencies
        ForeignFunctionInterface
        GADTs
        RankNTypes
        ScopedTypeVariables
        ImplicitParams
    ghc-options: -Wall -Werror
    build-depends:
        shapes,
        Truth-Core==0.1,
        hinotify>=0.4,
        bytestring >=0.9.1.5,
        unix>=2.3.1.0,
        mtl>=1.1.0.2,
        containers>=0.2.0.0,
        base>=4.0
    exposed-modules:
        Truth.Linux.File
    other-modules:
        System.INotify.Balanced
