cabal-version: >=1.14
name: Truth-Linux
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple


library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        shapes,
        Truth-Core==0.1,
        hinotify>=0.4,
        bytestring >=0.9.1.5,
        unix>=2.3.1.0,
        mtl>=1.1.0.2,
        containers>=0.2.0.0,
        base>=4.0
    exposed-modules:
        Truth.Linux.File
    other-modules:
        System.INotify.Balanced
