name: Truth-Shapes
version: 0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base >=4.0, containers >=0.2, mtl >=1.1.0.2,
               witness >=0.2, bytestring >=0.9.1.5
stability:
homepage:
package-url:
bug-reports:
synopsis:
description:
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Data.Searchable Data.Countable Data.FloatingLens
                 Data.IsTuple Data.Chain Data.Bijection Data.Codec Data.Injection
                 Data.Lens Data.ConstFunction Control.Wait Data.Store Data.Result
                 Data.FunctorOne Data.HasNewValue
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: TypeFamilies EmptyDataDecls UndecidableInstances
            FlexibleInstances FunctionalDependencies GADTs RankNTypes
            ScopedTypeVariables PatternGuards ImpredicativeTypes ImplicitParams
            GeneralizedNewtypeDeriving MultiParamTypeClasses FlexibleContexts
            TypeSynonymInstances
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Control.Instances
ghc-prof-options:
ghc-shared-options:
ghc-options: -fno-warn-deprecated-flags
hugs-options:
nhc98-options:
jhc-options: