name: Truth-Shapes
version: 0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: base >=4.0, bytestring >=0.9.1.5, containers >=0.2,
               mtl >=1.1.0.2, witness >=0.2
stability:
homepage:
package-url:
bug-reports:
synopsis:
description:  
             .
             .
             .
             .
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
exposed-modules: Control.Wait Data.IsTuple Data.Chain Data.Result
                 Data.FunctorOne Data.HasNewValue Data.Injection
                 Data.Bijection Data.Lens Data.FloatingLens
                 Data.Store Data.ConstFunction Data.Codec
exposed: True
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions: UndecidableInstances MultiParamTypeClasses
            FunctionalDependencies RankNTypes ScopedTypeVariables
            ImplicitParams FlexibleContexts FlexibleInstances EmptyDataDecls
            TypeSynonymInstances TemplateHaskell PatternGuards
            GeneralizedNewtypeDeriving TypeFamilies GADTs ImpredicativeTypes
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: Control.Instances
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall -fno-warn-deprecated-flags
hugs-options:
nhc98-options:
jhc-options:
