name: Truth-GTK
version: 0.1
cabal-version: >= 1.2
build-type:	Simple

library
{
build-depends:
 base>=4.0,
 gtk==0.10.0,
 Changes==0.1
extensions:
 TypeFamilies
 EmptyDataDecls
 UndecidableInstances
 FlexibleInstances
 FunctionalDependencies
 ForeignFunctionInterface
 GADTs
 RankNTypes
 ScopedTypeVariables
 PatternGuards
 ImpredicativeTypes
 ImplicitParams
 GeneralizedNewtypeDeriving
 ExistentialQuantification
exposed-modules:
 UI.Truth.GTK.SourceView
other-modules:
}

executable truth
{
build-depends:
 base>=4.0,
 gtk==0.10.0,
 Changes==0.1,
 Changes-Linux==0.1
extensions:
 TypeFamilies
 EmptyDataDecls
 UndecidableInstances
 FlexibleInstances
 FunctionalDependencies
 ForeignFunctionInterface
 GADTs
 RankNTypes
 ScopedTypeVariables
 PatternGuards
 ImpredicativeTypes
 ImplicitParams
 GeneralizedNewtypeDeriving
 ExistentialQuantification
main-is: Main.hs
}
